# iri-string

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  Makefile.toml  README.md
.woodpecker/: check-doc-msrv.yml  check-doc-stable.yml  test-modern.yml  test-msrv.yml
.woodpecker/scripts/: configure-toolchain.sh  prepare-toolchain.sh
benches/: resolve.rs
examples/: flamegraph-resolve.rs  new.rs  normalize.rs  old.rs  parse.rs  resolve.rs
iri-string-benches/: Cargo.toml
iri-string-benches/benches/: resolve.rs  validate.rs
iri-string-tests/: Cargo.toml
iri-string-tests/src/: lib.rs
iri-string-tests/tests/: uritemplate-test.rs
src/: absolute.rs  buffer.rs  build.rs  components.rs  convert.rs  format.rs  formatting.rs  lib.rs  manipulation.rs  mask_password.rs  normalize.rs  parser.rs  percent_encode.rs  percent_encoding.rs  raw.rs  relative.rs  resolve.rs  spec.rs  task.rs  template.rs  tests.rs  types.rs  validate.rs
src/buffer/: error.rs
src/components/: authority.rs
src/manipulation/: owned.rs  raw.rs  slice.rs
src/normalize/: error.rs  path.rs  pct_case.rs  percent_encoding.rs  remove_dot_segments.rs
src/parser/: char.rs  details.rs  str.rs  trusted.rs  validate.rs
src/parser/str/: maybe_pct_encoded.rs
src/parser/trusted/: authority.rs
src/parser/validate/: authority.rs  path.rs
src/percent_encode/: decode.rs
src/resolve/: iri.rs  tests.rs
src/resolve/tests/: refimpl.rs
src/spec/: internal.rs
src/template/: ast.rs  components.rs  context.rs  error.rs  expand.rs  simple_context.rs  string.rs  value.rs
src/template/parser/: char.rs  validate.rs
src/template/string/: owned.rs
src/types/: generic.rs  iri.rs  macros.rs  uri.rs
src/types/generic/: absolute.rs  error.rs  fragment.rs  macros.rs  normal.rs  query.rs  reference.rs  relative.rs
src/types/iri/: absolute.rs  error.rs  fragment.rs  normal.rs  reference.rs  relative.rs
src/validate/: iri.rs  tests.rs  uri.rs
tests/: build.rs  gh-issues.rs  normalize.rs  parse.rs  percent_encode.rs  resolve.rs  serde.rs  std_fmt.rs  string_types_interop.rs  template.rs  type_conversion.rs
tests/components/: mod.rs
tests/resolve_refimpl/: mod.rs
tests/utils/: mod.rs
