[package]
name = "iri-string"
version = "0.4.1"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2021"
rust-version = "1.57"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "IRI as string types"
repository = "https://github.com/lo48576/iri-string"
keywords = ["IRI", "URI"]

[package.metadata.docs.rs]
all-features = true

[features]
# Default features.
#
# nom is mandatory dependency and `nom-std` should be enabled when `std` is enabled.
default = ["nom-std", "std"]

# Enable features that requires `alloc`.
alloc = []
# Enable features that requires `std`.
std = ["alloc"]

# Enable `std` feature for `nom` crate.
#
# `std` does not enable `nom/std`, because `iri-string` itself does not need
# `alloc` or `std` feature of `nom` even when the `std` feature is enabled.
# However, with `nom/std` enabled, `memchr` will use runtime CPU detection and
# parsing will be faster.
nom-std = ["std", "nom/std"]
# Enable `alloc` feature for `serde` crate.
#
# If users want to enable `serde` and `alloc` at the same time, then they should
# also enable `serde-alloc` feature.
# Not doing so results in compile error.
serde-alloc = ["alloc", "serde/alloc"]
# Enable `std` feature for `serde` crate.
#
# If users want to enable `serde` and `std` at the same time, then they should
# also enable `serde-std` feature.
# Not doing so results in compile error.
serde-std = ["std", "serde/std"]

[dependencies]
nom = { version = "7", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.104"

[profile.release]
debug = true

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "lo48576/iri-string" }
