[package]
name = "iri-string"
version = "0.5.6"
authors = ["YOSHIOKA Takuma <nop_thread@nops.red>"]
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "IRI as string types"
repository = "https://github.com/lo48576/iri-string"
keywords = ["IRI", "URI"]

[package.metadata.docs.rs]
all-features = true
# See <https://docs.rs/about/builds>.
#
# Didn't create `docsrs` feature, since this (`#[doc(cfg(feature = ...))]`)
# depends on nightly feature and it prevents `cargo doc --all-features` from
# running with stable rust toolchain.
# See <https://doc.rust-lang.org/rustdoc/unstable-features.html#extensions-to-the-doc-attribute>
# for unstable `#[doc(cfg(...))]` attribute.
rustc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[features]
# Default features.
default = ["std"]

# Enable features that requires `alloc`.
alloc = []
# Enable features that requires `std`.
std = ["alloc"]

# Enable `std` feature for `memchr` crate.
#
# If users want to enable `memchr` and `std` at the same time, then they should
# also enable `memchr-std` feature.
memchr-std = ["std", "memchr/std"]
# Enable `alloc` feature for `serde` crate.
#
# If users want to enable `serde` and `alloc` at the same time, then they should
# also enable `serde-alloc` feature.
serde-alloc = ["alloc", "serde/alloc"]
# Enable `std` feature for `serde` crate.
#
# If users want to enable `serde` and `std` at the same time, then they should
# also enable `serde-std` feature.
serde-std = ["serde-alloc", "serde/std", "std"]

[dependencies]
memchr = { version = "2.4.1", default-features = false, optional = true }
serde = { version = "1.0.103", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3.5"
serde_test = "1.0.104"

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "flamegraph-resolve"
required-features = ["alloc"]

[[example]]
name = "normalize"
required-features = ["std"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "resolve"
required-features = ["std"]

[[bench]]
name = "resolve"
harness = false
required-features = ["alloc"]

[[bench]]
name = "validate"
harness = false
