[package]
name = "iri-string-benches"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Default features.
default = ["std"]

alloc = ["iri-string/alloc"]
std = ["alloc", "iri-string/std"]
memchr = ["iri-string/memchr"]
serde = ["iri-string/serde"]

[dependencies]
iri-string = { path = ".." }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "resolve"
harness = false
required-features = ["alloc"]

[[bench]]
name = "validate"
harness = false
